# afb-perm-check-ex

./: CMakeLists.txt  EXAMPLE.md  README.md  afb-perm-check-ext-book.yml
src/: perm-check.c
